@@ -71,12 +71,16 @@ void ftest(int a, int b)
 {
   if (ftest1(a) != b)
     ASSERT (0);
+#if 0 // This tests triggers signed integer overflow, which is undefined behaviour in C (though GCC apparently makes it implementation-defined, and tests for the implementation-defined behaviour here).
   if (ftest2(a) != b)
     ASSERT (0);
+#endif
   if (ftest4(a) != b)
     ASSERT (0);
+#if 0 // This tests triggers signed integer overflow, which is undefined behaviour in C (though GCC apparently makes it implementation-defined, and tests for the implementation-defined behaviour here).
   if (ftest5(a) != b)
     ASSERT (0);
+#endif
 }
 
 void ftestu(unsigned int a, unsigned int b)
@@ -99,8 +103,6 @@ void ftestu(unsigned int a, unsigned int b)
 void
 testTortureExecute (void)
 {
-#if !(defined(__clang__) && __clang_major__ <= 11)
-
 #if INT_MAX == 2147483647
   ftest(0x00000000,0x7fffffff);
   ftest(0x80000000,0xffffffff);
@@ -134,6 +136,4 @@ testTortureExecute (void)
 #endif
 
   return;
-
-#endif // __clang__
 }
